--- a/config/database.yml
+++ b/config/database.yml
@@ -55,7 +55,7 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: &test
   <<: *default
   database: carrosen_on_rails_test
 
@@ -83,3 +83,6 @@ production:
   database: carrosen_on_rails_production
   username: carrosen_on_rails
   password: <%= ENV['CARROSEN_ON_RAILS_DATABASE_PASSWORD'] %>
+
+cucumber:
+  <<: *test
